--- a/src/pages/add-shopping/add-shopping.html
+++ b/src/pages/add-shopping/add-shopping.html
@@ -6,13 +6,25 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>AddShopping</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Add Shopping</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <ion-item>
+    <ion-label floating>Item name</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label floating>Number</ion-label>
+    <ion-input type="number"></ion-input>
+  </ion-item>
+
+  <button ion-button block>Add item</button>
 
 </ion-content>
