--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -18,5 +18,10 @@
 </ion-header>
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item *ngFor="let item of shoppingListRef$ | async">
+      <h2>Item name: {{ item.itemName }}</h2>
+      <h3>Amount: {{ item.itemNumber }}</h3>
+    </ion-item>
+  </ion-list>
 </ion-content>
