--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -19,7 +19,7 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-item *ngFor="let item of shoppingListRef$ | async">
+    <ion-item *ngFor="let item of shoppingListRef$ | async" (click)="selectShoppingItem(item)" >
       <h2>Item name: {{ item.itemName }}</h2>
       <h3>Amount: {{ item.itemNumber }}</h3>
     </ion-item>
